# clipboard_toolbox

./: .gitignore  AGENTS.md  CMakeLists.txt  build.bat
src/: autosavewidget.cpp  autosavewidget.h  clipboardmanager.cpp  clipboardmanager.h  contentwidget.cpp  contentwidget.h  downloadprogressfloatingwindow.cpp  downloadprogressfloatingwindow.h  downloadprogressmodel.cpp  downloadprogressmodel.h  downloadqueue.cpp  downloadqueue.h  event.h  historymanager.cpp  historymanager.h  historywidget.cpp  historywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mimewidget.cpp  mimewidget.h  notificationmanager.cpp  notificationmanager.h  settingsmanager.cpp  settingsmanager.h  settingswidget.cpp  settingswidget.h  utils.cpp  utils.h
